kubernetes/apps/istio-system/kubeflow-route/app/authorizationpolicy.yaml
---
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: istio-ingressgateway-oauth2-proxy
  namespace: istio-system
spec:
  action: CUSTOM
  provider:
    name: oauth2-proxy
  rules:
  - to:
    - operation:
        notPaths:
        - /dex/*
        - /dex/**
        - /oauth2/*
    when:
    - key: request.headers[authorization]
      notValues:
      - '*'
  selector:
    matchLabels:
      app: istio-ingressgateway
---
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: istio-ingressgateway-require-jwt
  namespace: istio-system
spec:
  action: DENY
  rules:
  - from:
    - source:
        notRequestPrincipals:
        - '*'
    to:
    - operation:
        notPaths:
        - /dex/*
        - /dex/**
        - /oauth2/*
  selector:
    matchLabels:
      app: istio-ingressgateway
---
apiVersion: security.istio.io/v1
kind: RequestAuthentication
metadata:
  name: dex-jwt
  namespace: istio-system
spec:
  jwtRules:
  - forwardOriginalToken: true
    fromHeaders:
    - name: Authorization
      prefix: 'Bearer '
    issuer: https://kubeflow.goyangi.io/dex
    outputClaimToHeaders:
    - claim: email
      header: kubeflow-userid
    - claim: groups
      header: kubeflow-groups
  selector:
    matchLabels:
      app: istio-ingressgateway
---
apiVersion: security.istio.io/v1
kind: RequestAuthentication
metadata:
  name: m2m-token-issuer
  namespace: istio-system
spec:
  jwtRules:
  - forwardOriginalToken: true
    fromHeaders:
    - name: Authorization
      prefix: 'Bearer '
    issuer: https://kubernetes.default.svc.cluster.local
    jwksUri: http://cluster-jwks-proxy.istio-system.svc.cluster.local/openid/v1/jwks
    outputClaimToHeaders:
    - claim: sub
      header: kubeflow-userid
    - claim: groups
      header: kubeflow-groups
  - forwardOriginalToken: true
    fromHeaders:
    - name: Authorization
      prefix: 'Bearer '
    issuer: https://kubernetes.default.svc
    jwksUri: http://cluster-jwks-proxy.istio-system.svc.cluster.local/openid/v1/jwks
    outputClaimToHeaders:
    - claim: sub
      header: kubeflow-userid
    - claim: groups
      header: kubeflow-groups
  selector:
    matchLabels:
      app: istio-ingressgateway
